public/style.css
/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
html {
    -webkit-text-size-adjust: 100%; /* 2 */
}
main,
details {
  display: block;
}
summary {
  display: list-item;
}
img {
  border-style: none;
}
button,
input,
optgroup,
select,
textarea {
  font-family: inherit; /* 1 */
  font-size: 100%; /* 1 */
  line-height: 1.15; /* 1 */
  margin: 0; /* 2 */
}
button,
input { /* 1 */
  overflow: visible;
}
button,
select { /* 1 */
  text-transform: none;
}
button,
[type="button"],
[type="reset"],
[type="submit"] {
  -webkit-appearance: button;
}
button::-moz-focus-inner,
[type="button"]::-moz-focus-inner,
[type="reset"]::-moz-focus-inner,
[type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}
button:-moz-focusring,
[type="button"]:-moz-focusring,
[type="reset"]:-moz-focusring,
[type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

b,
strong {
  font-weight: bolder;
}


/** Application styles */
html,
body {
  height: 100%;
  margin: 0;
  padding: 0;
}
body{
    font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial, sans-serif;
    font-size: 14px;
    line-height: 1.4;
    color: #222;
    margin: 16px;
    background: #f1f1f1;
}
h1,
h2,
h3,
h4,
h5 {
    line-height: 1.2;
}

/* whitespace */
form > div,
p,
h1,
h2,
h3,
.totals,
.datepicker,
.box {
    margin:0 0 16px;
}
.box.chart { padding: 16px; }
.boxes {
  grid-gap: 16px;
}


label {
    display: block;
    margin-bottom: 4px;
    font-weight: bold;
}
button,
input,
select {
    padding: 4px 8px;
    font-size: 14px;
    font-family: inherit;
    font-weight: inherit;
    box-sizing: border-box;
    border-radius: 4px;
    border: 1px solid #888;
    background-color: #fff;
    color: #222;
}
button {
    background: #2271b1;
    border-color: #2271b1;
    color: white;
}
code {
    font-family: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
}

/* datepicker */
.datepicker summary {
    padding: 8px;
    background: white;
    color: #333;
    display: inline-block;
    border: 1px solid #ddd;
    border-radius: 6px;
    line-height: 20px;
}
.datepicker summary:before {
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Crect x='0' fill='none' width='20' height='20'/%3E%3Cg%3E%3Cpath d='M15 4h3v15H2V4h3V3c0-.41.15-.76.44-1.06.29-.29.65-.44 1.06-.44s.77.15 1.06.44c.29.3.44.65.44 1.06v1h4V3c0-.41.15-.76.44-1.06.29-.29.65-.44 1.06-.44s.77.15 1.06.44c.29.3.44.65.44 1.06v1zM6 3v2.5c0 .14.05.26.15.36.09.09.21.14.35.14s.26-.05.35-.14c.1-.1.15-.22.15-.36V3c0-.14-.05-.26-.15-.35-.09-.1-.21-.15-.35-.15s-.26.05-.35.15c-.1.09-.15.21-.15.35zm7 0v2.5c0 .14.05.26.14.36.1.09.22.14.36.14s.26-.05.36-.14c.09-.1.14-.22.14-.36V3c0-.14-.05-.26-.14-.35-.1-.1-.22-.15-.36-.15s-.26.05-.36.15c-.09.09-.14.21-.14.35zm4 15V8H3v10h14zM7 9v2H5V9h2zm2 0h2v2H9V9zm4 2V9h2v2h-2zm-6 1v2H5v-2h2zm2 0h2v2H9v-2zm4 2v-2h2v2h-2zm-6 1v2H5v-2h2zm4 2H9v-2h2v2zm4 0h-2v-2h2v2z'/%3E%3C/g%3E%3C/svg%3E");
    content: "";
    display: inline-block;
    line-height: 1;
    speak: never;
    width: 20px;
    height: 20px;
    vertical-align: top;
    margin-right: 4px;
}
.datepicker summary:focus,
.datepicker summary:hover {
    background-color: #eee;
    cursor: pointer;
}
.datepicker-dropdown {
    margin-top: 8px;
    background: white;
    color: #222;
    width: auto;
    min-width: 360px;
    z-index: 20;
    position: absolute;
    box-shadow: 2px 2px 12px 0 rgba(0, 0, 0, 0.5);
    border-radius: 4px;
}
.datepicker-title {
  background: #2e363f;
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
  color: white;
  text-align: center;
  padding: 12px;
  font-weight: bold;
  font-size: 1.1em;
}
.datepicker-inner {
  padding: 16px 16px 0 16px;
}

/** Chart */
.ka-chart {
  overflow: visible;
  min-height: 200px;
}
.ka-chart--tooltip {
  position: absolute;
  z-index: 9991; /* above wp admin menu */
}
.ka-chart--tooltip-box {
  background: rgba(46, 54, 63, 0.96);
  box-shadow: 2px 2px 12px 0 rgba(0,0,0,0.5);
  border-radius: 4px;
  color: #EEE;
}
.ka-chart--tooltip-heading {
  font-weight: 600;
  padding: 12px;
  line-height: 1;
}
.ka-chart--tooltip-content {
  padding: 6px 12px;
  width: 50%;
  display: block;
  flex: 1;
}
.ka-chart--tooltip-content {
  border-top: 3px solid transparent;
}
.ka-chart--tooltip-amount {
  color: #FFF;
  font-weight: bold;
}
.ka-chart--tooltip-arrow {
  width: 0;
  height: 0;
  margin-left: auto;
  margin-right: auto;
  /* css trick to create a downward pointing triangle */
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-top: 6px solid rgba(46, 54, 63, 0.96);
}
.ka--pageviews {
  border-top-color: #72aee6;
  fill: #72aee6;
}
.ka--visitors {
  border-top-color: #2271b1;
  fill: #2271b1;
}
.weekend .ka--visitors {
  fill: #195585;
}

/* boxes */
.boxes {
  display: grid;
  grid-template-columns: repeat(6, 1fr);
}
.box {
  background: #fff;
  border-radius: 6px;
  border: 1px solid #ddd;
  grid-column: span 6;
}
@media (min-width: 840px) {
  .box{
    grid-column: span 3;
  }
}

/* totals component */
.totals {
    background: #2e363f;
    color: white;
    padding: 24px;
    border-radius: 6px;
    width: 100%;
    box-sizing: border-box;
}
.totals tbody {
  display: flex;
  flex-flow: row wrap;
  gap: 48px;
}
.totals-amount {
    display: block;
    line-height: 48px;
    font-size: 48px;
    font-weight: 500;
    margin-bottom: 6px;
    min-width: 160px;
}
.totals-subtext {
    color: #DDD;
}
.totals-change {
  font-size: 16px;
  margin-left: 6px;
  font-weight: normal;
  vertical-align: top;
  letter-spacing: normal;
  color: #aaa;
}
.totals-change.up {
  color: limegreen;
}
.totals-change.down {
  color: #fb7272;
}

/* page & referrer tables */
.table {
  table-layout: fixed;
  width: 100%;
  border-spacing: 0;
}
.table td,
.table th {
  border-top: 1px solid #efefef;
  text-align: right;
  padding: 6px 8px;
  width: 90px;
  overflow: hidden;
  text-overflow: ellipsis;
}
.table th {
  background: #2e363f;
  border-color: #2e363f;
  color: white;
}
/* fix borders for table header */
.table th:first-of-type {
  border-radius: 4px 0 0 0;
}
.table th:last-of-type {
  border-radius: 0 4px 0 0;
}
/* rank column */
.table th:first-child,
.table td:first-child {
  width: 18px;
}
/* page title / referrer url / event param column */
.table td[colspan],
.table td:nth-child(2),
.table th:nth-child(2) {
  text-align: left;
  width: auto;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

/* use a nice page transition in browsers that support it */
@view-transition {
 navigation: auto;
}

